[project]
name = "warprl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym>=0.26.2",
    "hydra-core>=1.3.2",
    "ipython>=8.27.0",
    "matplotlib>=3.9.2",
    "pyglet>=2.0.17",
    "seaborn>=0.13.2",
    "torch==2.4.1+cu121",
    "torchrl==0.5.0",
    "torchvision==0.19.1+cu121",
    "tqdm>=4.64.1",
    "urchin>=0.0.27",
    "usd-core==24.8",
    "wandb>=0.18.1",
    "warp-lang[extras]==1.6.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
